--- a/asm1/src/main/resources/templates/Product.html
+++ b/asm1/src/main/resources/templates/Product.html
@@ -10,6 +10,9 @@
 </head>
 
 <body class="bg-gray-50 min-h-screen">
+      <!-- header -->
+      <div th:replace="fragments/header :: header"></div>
+
 
   <div class="flex px-10 py-8 gap-8">
 
@@ -90,6 +93,9 @@
 
   </div>
 
+   <!-- footerfooter -->
+   <div th:replace="fragments/footer :: footer"></div>
+   
 </body>
 
 </html>
